- a bug with P4A_Message and IE7 was solved
- Oracle's LOBs are now supported
- P4A_Object's ID generation algorithm was changed (thanks to pbond81 and Mario Spada)
- P4A_Table thumbnail generation speed was improved (bug #2220506) (thanks to pbond81)
- P4A_Box's ul/ol is now rendered (bug 2634061) (thanks to bes_sf)
- a note about aliases on P4A_DB_Source's PK was added to the README file

3.2.2
- P4A_Table's image cols are now centered horizontally
- P4A_Button::setTooltip() and getTooltip() methods were added
- afterupload event typo was fixed
- P4A_Thumbnail_Generator::renderToFile() method was added
- P4A_Mask::getSource() method was added
- Zend Framework was updated to 1.7.7
- a bug with P4A_Fieldset theme was fixed (thanks to Mario Spada)
- P4A_DB::singleton() DB type verification is now case insensitive
  (bug #2643785) (thanks to BES)
- a few modifications were done on screen.css file for a better theme
  result (thanks to pbond81)
- The way we managed P4A_Validate translations was rewritten to fit the
  new rules by Zend Framework (we need your help translating the new
  messages now http://tinyurl.com/au5bvb)
- a bug with P4A_DB_Source::setWhere() method was fixed
- translations were synchronized
- auto file inclusion system was updated to avoid reading Mac hidden files
- a bug with P4A_DB_Source::addGroup() method was solved (internal syntax
  change due to a Zend Framework change)
- p4a_load_js() javascript function was updated to avoid errors if no callback
  function is passed

3.2.1
- Zend Framework was updated to 1.7.4
- PEAR::Net_Useragent_Detect was updated to 2.5.0
- jQuery::form was updated to 2.19
- P4A_DB_Source::setQuery() now strips out final semicolon from the passed
  SQL query (if present) (bug #2557215)
- P4A_DB_Source::setWhere() now calls a firstRow() if the DB_Source isn't
  in the "new row" state (bug #2316271)
- P4A_Filename2File() now uses the fileinfo module if no mime type
  is detected otherways (bug #2121565)